# ProjectProteus

./: .claude-followup-82.json  .claude-followup-88.md  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  RELEASES.md  SECURITY.md  justfile  pixi.toml  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  branch-protection.main.json  dependabot.yml  pull_request_template.md
.github/workflows/: _required.yml  apply-branch-protection.yml  ci.yml  codeql.yml  cross-repo-dispatch.yml  dispatch-failure-alert.yml  promote.yml  release.yml
configs/pipelines/: achaean-fleet.yaml  schema.json
dagger/: dagger.json  package-lock.json  package.json  vitest.config.mts  vitest.config.ts
dagger/src/: index.test.ts  index.ts  tag.ts
docs/: backwards-compat.md  branch-protection.md  dispatch-contract.md  milestones.md  releases.md
proteus/: __main__.py  config.py  models.py  runner.py
proteus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: apply-branch-protection.sh  branch-protection-apply.sh  check-symlinks.sh  dispatch-apply.sh  promote-image.sh  verify-branch-protection.sh  verify-context-names.sh  verify-issue-92-invariants.sh
tests/: branch-protection-apply.test.sh  branch-protection.test.sh  dispatch-apply-retry.test.sh  dispatch-apply.test.sh  remediation-plan-checkboxes.test.sh  remediation-plan-sync.test.sh  test-required-checks-ruleset.sh  version-consistency.test.sh
(+30 files in other folders)
